# kanumi

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: demo.tape
src/: main.rs
src/cli/: args.rs  config.rs  dirs.rs  list.rs  mod.rs  scan.rs
src/models/: configuration.rs  image_meta.rs
src/utils/: common.rs
tests/: basic_integration.rs
