[package]
name = "kanumi"
version = "0.2.0"
authors = ["Coko <91132775+Coko7@users.noreply.github.com>"]
edition = "2021"
description = "A cli to manage collections of images"
license = "GPL-3.0"
repository = "https://github.com/Coko7/kanumi"
keywords = ["cli", "wallpaper", "images", "finder", "fzf"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.93"
blake3 = "1.6.1"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
directories = "6.0.0"
env_logger = "0.11.5"
fuzzy-matcher = "0.3.7"
image = "0.25.5"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
walkdir = "2.5.0"
